fix: word wrap and modal

--- a/src/styles/components/CreateTestForm.module.scss
+++ b/src/styles/components/CreateTestForm.module.scss
@@ -21,12 +21,16 @@
   }
 
   .questionsList {
-    max-height: 300px;
+    max-height: 200px;
     overflow-y: auto;
     margin: 5px 0;
     padding: 10px;
     background-color: #1e2226;
     border-radius: 8px;  
+
+    @media (min-width: 767px) {
+      max-height: 300px;
+    }
 
     .answersList {
       margin: 5px 0;
