--- a/src/styles/pages/CoursePage.module.scss
+++ b/src/styles/pages/CoursePage.module.scss
@@ -9,12 +9,14 @@
     @extend %flex-center-between;
 
     .title {
-      font-size: 1.3rem;
+      width: 90%;
+      font-size: 1.2rem;
       font-weight: 600;
       color: var(--light-color);
+      word-wrap: break-word;
 
       @media (min-width: 425px){
-        font-size: 1.8rem;
+        font-size: 1.5rem;
       }
     }
 
@@ -31,6 +33,7 @@
   .description {
     margin: 10px 0;
     color: var(--gray-color);
+    word-wrap: break-word;
   }
 
   .toolsBlock {
